# universalApi

./: .env.example  .env.local.example  .gitignore  CLAUDE.md  Makefile  Procfile.local  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.claude/docs/: commands-reference.md  database-patterns.md  document-pattern.md  plugin-development.md  testing-guide.md  troubleshooting.md
.claude/skills/test-generator/: SKILL.md
backend/: README.md  create_admin.py  create_admin_simple.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0269b1b38152_add_user_workflow_steps.py  0b5913df4a79_add_audio_transcription_tables.py  1a01046d8c32_add_source_workflow_steps.py  27a18eff3966_initial_schema.py  5a2e5faec3f2_seed_document_types_from_upload_plugin.py  748ccef91929_add_transcription_words_document_type.py  96b90a9e7415_allow_parallel_workflow_steps.py  a1b2c3d4e5f6_migrate_transcriptions_to_documents.py  b2c3d4e5f6a7_drop_transcriptions_tables.py  c93679a32e05_add_transcription_diarize_document_type.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: auth.py  documents.py  jobs.py  plugins.py  router.py  sources.py  workflows.py
backend/app/core/: __init__.py  constants.py  logging.py  logging_filters.py  shutdown.py
backend/app/core/ai/: __init__.py  base.py  openai.py
backend/app/core/auth/: __init__.py  api_keys.py  dependencies.py  jwt.py  password.py
backend/app/core/database/: __init__.py  base.py  migration_check.py  session.py
backend/app/core/documents/: __init__.py  models.py
backend/app/core/events/: __init__.py  bus.py  models.py  redis_subscriber.py  sse.py  types.py
backend/app/core/plugins/: __init__.py  base.py  handler_wrapper.py  loader.py  models.py  registry.py  routing.py
backend/app/core/queue/: __init__.py  base_task.py  celery_app.py
backend/app/core/sources/: __init__.py  models.py  service.py
backend/app/core/users/: __init__.py  models.py
backend/plugins/: PLUGIN_TEMPLATE.md
backend/plugins/audio_transcription/: README.md  __init__.py  handlers.py  models.py  plugin.py  router.py  tasks.py
backend/plugins/audio_transcription/tests/: __init__.py  conftest.py  test_e2e.py  test_unit.py
backend/plugins/audio_transcription_diarize/: __init__.py  handlers.py  plugin.py  tasks.py
backend/plugins/audio_transcription_words/: __init__.py  handlers.py  plugin.py  tasks.py
backend/plugins/upload/: README.md  __init__.py  plugin.py  router.py
backend/plugins/upload/tests/: __init__.py  conftest.py  test_e2e.py  test_unit.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: conftest.py  test_multi_instance_consistency.sh  test_plugin_settings_persistence.sh  test_workflow_execution.py
backend/tests/fixtures/: __init__.py
backend/tests/integration/: __init__.py  test_api_auth.py  test_api_documents.py  test_api_plugins.py  test_api_sources.py  test_workflow_api.py
backend/tests/unit/: __init__.py  test_auth.py  test_workflow_routing.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/scripts/: generate-mocks.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/features/: FilePreview.tsx  FilePreviewModal.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/core/api/: client.ts
frontend/src/core/contexts/: SSEContext.tsx
frontend/src/core/hooks/: useSSE.ts  useSSESingleton.ts
frontend/src/core/stores/: auth.ts
frontend/src/core/utils/: logger.ts
frontend/src/features/documents/browser/: DocumentBrowser.tsx  DocumentDetails.tsx  DocumentFilters.tsx  DocumentTreeView.tsx
frontend/src/features/documents/column-view/: Breadcrumb.tsx  Column.tsx  ColumnView.tsx  FilterModal.tsx  PreviewPanel.tsx
frontend/src/features/documents/detail/: DocumentMetadataBar.tsx  DocumentOverview.tsx  ProcessingSection.tsx  RelatedDocuments.tsx
frontend/src/features/documents/preview/: TranscriptionPreview.tsx
frontend/src/features/documents/upload/: UploadQueue.tsx  UploadTab.tsx
frontend/src/features/sources/components/: SourceWorkflowsTab.tsx  WorkflowBuilder.tsx
frontend/src/features/timeline/: types.ts
frontend/src/features/timeline/components/: DocumentEventPoint.tsx  (+10 more)
frontend/src/pages/: Dashboard.tsx  DocumentDetailPage.tsx  Documents.tsx  Login.tsx  Plugins.tsx  SourceDetail.tsx  Sources.tsx  Timeline.tsx  Transcriptions.tsx  UserWorkflows.tsx
frontend/src/test/: setup.ts
frontend/src/test/mocks/: handlers.manual.ts  handlers.ts  server.ts
scripts/: wait-for-services.sh
(+12 files in other folders)
