[tool.poetry]
name = "universalapi"
version = "0.1.0"
description = "Universal API for data processing with plugin architecture"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{include = "app"}, {include = "plugins"}]

[tool.poetry.dependencies]
python = "^3.11"

# FastAPI & Web
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.12"
sse-starlette = "^2.1.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.14.0"
pgvector = "^0.3.5"

# Redis & Celery
redis = "^5.2.0"
celery = {extras = ["redis"], version = "^5.4.0"}

# Auth
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.0"

# Validation & Settings
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
email-validator = "^2.2.0"

# AI
openai = "^1.55.0"
httpx = "^0.28.0"

# Utils
python-dotenv = "^1.0.1"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
honcho = "^1.1.0"
setuptools = "^80.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app", "plugins"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests", "plugins"]
python_files = ["test_*.py"]
addopts = ["-ra", "-q", "--strict-markers", "--strict-config"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
    "e2e: marks end-to-end tests",
    "plugin: marks plugin-specific tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app", "plugins"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
